*) robots.txt filter uses httpclient now
git-svn-id: svn://svn.paxle.net/paxle/trunk@905 f5d3ab42-bacf-4b1a-9692-565be65a0cfe